--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -107,12 +107,21 @@
                             {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
                             <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                <p class="dropdown-item">
-                                <h2>IP:</h2><p>{{ user.IP }}</p>
-                                <h2>Nom:</h2><p>{{ user.Nom }}</p></p>
-
+                                 <span class="dropdown-item"></span>
+                                    <div class="d-flex">
+                                             <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
+                                             <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
+                                    </div>
+                                    <div  class="d-flex text-center" style="margin-top:5px;">
+                                        <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;"> 
+                                        <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
+                                    </div>
+                                
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+                                <div class="d-flex">
+                                     <img src ="{{asset('assets/svg/logout.svg')}}"> 
+                                     <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
+                                </div>
                             </div>
                         </li>
                     </div>
